Modification mise en page html-css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page Index</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -11,6 +11,6 @@
     <h1>Page Index</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit, numquam, voluptatem porro voluptas nobis animi, 
     ab possimus eligendi dolor excepturi delectus? Nesciunt quidem odit assumenda dolore laudantium sapiente consequuntur?</p>
-
+    <a href="./contact.html">Contact</a>
 </body>
 </html>
