--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Page Contact</title>
+    <title>projet-git Contact</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
 
-    <h1>Page Contact</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit, numquam, voluptatem porro voluptas nobis animi, 
-    ab possimus eligendi dolor excepturi delectus? Nesciunt quidem odit assumenda dolore laudantium sapiente consequuntur?</p>
+    <h1>'projet-git' page Contact</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit, numquam, voluptatem porro voluptas nobis animi, 
+        ab possimus eligendi dolor excepturi delectus? Nesciunt quidem odit assumenda dolore laudantium sapiente consequuntur?
+    </p>
 
 </body>
 </html>
