--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Page Index</title>
+    <title>projet-git Index</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     
-    <h1>Page Index</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit, numquam, voluptatem porro voluptas nobis animi, 
-    ab possimus eligendi dolor excepturi delectus? Nesciunt quidem odit assumenda dolore laudantium sapiente consequuntur?</p>
+    <h1>''projet-git'page Index</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit, numquam, voluptatem porro voluptas nobis animi, 
+        ab possimus eligendi dolor excepturi delectus? Nesciunt quidem odit assumenda dolore laudantium sapiente consequuntur?
+    </p>
     <a href="./contact.html">Contact</a>
 </body>
 </html>
