add a comment on the work

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <!-- your work looks great -->
     <h1>''projet-git'page Index</h1>
     <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit, numquam, voluptatem porro voluptas nobis animi, 
